5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1758_1580.log
== TEST (2019-05-26 19:42:51) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))
i = 0

while (i < size(notas)):
	if (notas[i] == -1):
		alunos = alunos[i]
	else:
		alunos = alunos
	i = i + 1
	
print(alunos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:44:30) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0

while (i < size(notas)):
	if (notas[i] == -1):
		alunos = alunos[i]
	else:
		alunos = alunos
	i = i + 1
	
print(alunos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:44:32) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0

while (i < size(notas)):
	if (notas[i] == -1):
		alunos = alunos[i]
	else:
		alunos = alunos
	i = i + 1
	
print(alunos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:45:39) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0

while (i < size(notas)):
	if (notas[i] == -1):
		alunos = alunos[i]
	else:
		alunos = alunos
	i = i + 1
	
print(alunos)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:32:44) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6):
		r = r + 1
	i = i + 1
	
print(f)	
print(a)
print(r)
		
-- ERROR:
File "XXXX", line 14
    (notas[i] < 6):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:32:52) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6):
		r = r + 1
	i = i + 1
	
print(f)	
print(a)
print(r)
		
-- ERROR:
File "XXXX", line 14
    (notas[i] < 6):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:33:18) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	i = i + 1
	
print(f)	
print(a)
print(r)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:33:54) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	i = i + 1
	
print(f)	
print(a)
print(r)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:37:46) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	elif (notas[i] < 6):
		r = r + 1
	elif (notas[i] != -1):
		soma = soma + notas[i]
		med = soma/(size(notas) - f)
	i = i + 1
	
print(med)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:38:10) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	elif (notas[i] < 6):
		r = r + 1
	elif (notas[i] != -1):
		soma = soma + notas[i]
		med = soma/(size(notas) - f)
	i = i + 1
	
print(med)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:40:11) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	elif (notas[i] < 6):
		r = r + 1
	elif (notas[i] != -1):
		soma = soma + notas[i]
	i = i + 1
med = soma/(size(notas) - f)	
print(med)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:41:06) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	elif (notas[i] < 6):
		r = r + 1
	elif (notas[i] != -1):
		soma = soma + notas[i]
		med = soma/(size(notas) - f)	
	i = i + 1

print(med)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:41:26) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	elif (notas[i] < 6):
		r = r + 1
	elif (notas[i] != -1):
		soma = soma + notas[i]
		med = soma/(size(notas) - f)	
	i = i + 1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:46:31) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	elif (notas[i] < 6):
		r = r + 1
	elif(notas[i] >= 0):
		soma = soma + notas[i]
		med = soma/size(notas) - f
	i = i + 1	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:46:43) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	elif (notas[i] < 6):
		r = r + 1
	elif(notas[i] >= 0):
		soma = soma + notas[i]
		med = soma/size(notas) - f
	i = i + 1	
print(med)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:46:55) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	elif (notas[i] < 6):
		r = r + 1
	elif(notas[i] >= 0):
		soma = soma + notas[i]
		med = soma/size(notas) - f
	i = i + 1	
print(med)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:53:59) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	i = i + 1	
	
med = soma/(size(notas) - f)	
print(med)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:54:15) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	i = i + 1	
	
med = soma/(size(notas) - f)	
print(round(med, 2))		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:54:53) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	i = i + 1	
	
med = soma/(size(notas) - f)	
print(round(med, 2))		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:00:24) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	i = i + 1	
	
while(notas[i] != max(notas)):
	i = i + 1
	
med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:01:02) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	i = i + 1	
	
while(notas[i] != max(notas)):
	i = i + 1
	
med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:01:11) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	i = i + 1	
	
while (notas[i] != max(notas)):
	i = i + 1
	
med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:02:04) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	i = i + 1	
	
med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:02:39) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] != max(notas)):
		i = i + 1
	i = i + 1	
	
med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:03:00) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] != max(notas)):
		i = i + 1
	i = i + 1	
	
med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:03:09) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	i = i + 1	
	
med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:10:49) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	i = i + 1	
	
med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:12:29) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
m = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[m] != max(notas)):	
		m = m + 1	
	i = i + 1
med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[m])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:12:51) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
m = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[m] != max(notas)):	
		m = m + 1	
	i = i + 1
med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[m])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:12:55) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
m = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[m] != max(notas)):	
		m = m + 1	
	i = i + 1
med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[m])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:16:08) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
m = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	i = i + 1

while (notas[m] != max(notas)):
	m = m + 1
med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[m])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:17:49) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
m = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] != max(notas)):
		i = i + 1
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[m])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:19:00) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
m = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] != max(notas)):
		i = i + 1
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:19:12) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
m = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] != max(notas)):
		i = i + 1
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:21:34) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6) and (notas != -1):
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] == max(notas)):
		maior = i
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[maior])

-- ERROR:
File "XXXX", line 15
    (notas[i] < 6) and (notas != -1):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:21:44) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6) and (notas != -1):
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] == max(notas)):
		maior = i
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[maior])

-- ERROR:
File "XXXX", line 15
    (notas[i] < 6) and (notas != -1):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:22:11) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6) and (notas != -1)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] == max(notas)):
		maior = i
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[maior])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:22:27) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6) and (notas != -1)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] == max(notas)):
		maior = i
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[maior])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:23:46) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6) and (notas != -1)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] == max(notas)):
		maior = i
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[maior])

-- EXECUTION TIME:
0.526931
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 29, in <module>
    print(alunos[maior])
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:23:59) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6) and (notas != -1)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] == max(notas)):
		maior = i
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[maior])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:24:35) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6) and (notas != -1)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] == max(notas)):
		maior = i
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[maior])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:25:09) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6) and (notas != -1)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] == max(notas)):
		maior = i
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[maior])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:27:41) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6) and (notas != -1)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] == max(notas)):
		maior = i
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[maior])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:31:39) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
maio = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6) and (notas != -1)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] == max(notas)):
		maior = i
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[maior])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:31:43) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
maior = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6) and (notas != -1)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] == max(notas)):
		maior = i
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[maior])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:31:54) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
maior = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6) and (notas != -1)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] == max(notas)):
		maior = i
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[maior])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:32:00) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(input("Alunos: "))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6) and (notas != -1)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] == max(notas)):
		maior = i
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[maior])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:33:10) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6) and (notas != -1)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] == max(notas)):
		maior = i
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[maior])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:33:34) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos: ")))
i = 0
f = 0
a = 0
r = 0
soma = 0
while(i < size(notas)):
	if (notas[i] == -1):
		f = f + 1
	elif (notas[i] >= 6):
		a = a + 1
	else:
		(notas[i] < 6) and (notas != -1)
		r = r + 1
	if (notas[i] != -1):
		soma = soma + notas[i]
	if (notas[i] == max(notas)):
		maior = i
	i = i + 1


med = soma/(size(notas) - f)	
print(f)
print(a)
print(r)
print(round(med, 2))		
print(alunos[maior])

-- EXECUTION TIME:
0.48867
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
